Fix CSS grid gaps

--- a/css/main.scss
+++ b/css/main.scss
@@ -100,7 +100,7 @@ section {
   main {
     display: grid;
     grid-template-columns: 1fr 2fr;
-    grid-template-rows: auto auto auto;
+    grid-template-rows: auto 0fr 1fr;
     column-gap: 4em;
   }
 
@@ -109,11 +109,11 @@ section {
   }
 
   .row-1 {
-    grid-row: 1 / 1;
+    grid-row: 1 / 2;
   }
 
   .row-2 {
-    grid-row: 2 / 2;
+    grid-row: 2 / 3;
   }
 
   .row-2-4 {
@@ -121,7 +121,7 @@ section {
   }
 
   .row-3 {
-    grid-row: 3 / 3;
+    grid-row: 3 / 4;
   }
 
   .col-1 {
